using UnityEngine;

public class MachineModifyButton_Levelup : MachineModifyButton
{
    public override void OnButtonClick()
    {
        base.OnButtonClick();
    }
}
