using UnityEngine;

public class MachineModifyButton_Repair : MachineModifyButton
{
    public override void OnButtonClick()
    {
        base.OnButtonClick();
    }
}
