using UnityEngine;

public class MachineModifyButton_Sell : MachineModifyButton
{
    public override void OnButtonClick()
    {
        base.OnButtonClick();
    }
}
